fix overflow in button, statesButton and dropdown

--- a/src/components/Button/Button.st.css
+++ b/src/components/Button/Button.st.css
@@ -207,6 +207,8 @@
 
 .root:upgrade::content {
     overflow: visible;
+    text-overflow: unset;
+    white-space: unset;
 }
 
 .root:upgrade{
@@ -214,6 +216,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    display: inline-block;
 }
 
 .root:mobile:upgrade{
