--- a/src/components/StatesButton/StatesButton.st.css
+++ b/src/components/StatesButton/StatesButton.st.css
@@ -24,6 +24,7 @@
 
 .root:upgrade::content{
     line-height: 1;
+    display: inline-block;
 }
 
 .successIcon {
